# api/models/auth.go
@@ -5,21 +5,18 @@ type CustomerLoginRequest struct {
 	Password string `json:"password"`
 }
 
-type CustomerLoginResponse struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-}
+
 
 type AuthInfo struct {
 	UserID   string `json:"user_id"`
 	UserRole string `json:"user_role"`
 }
 
-type AdminLoginRequest struct {
+type UserLoginRequest struct {
 	Login    string `json:"login"`
 	Password string `json:"password"`
 }
-type AdminLoginResponse struct {
+type UserLoginResponse struct {
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
 }
