# api/router.go
@@ -33,8 +33,7 @@ func New(services service.IServiceManager, log logger.ILogger) *gin.Engine {
 
 	{
 		// auth endpoints
-		r.POST("/auth/customer/login", h.CustomerLogin)
-		r.POST("/auth/admin/login", h.AdminLogin)
+		r.POST("/auth/admin/login", h.UserLogin)
 
 		// user endpoints
 		r.POST("/user", h.CreateUser)
